@@ -1,5 +1,6 @@
 CHANGELOG
 
+2015-09-24: added transcription of Marc Okrand's name.
 2015-08-03: vocab for bodily gases.
 2015-05-01: use Proguard for TTS version too.
 2015-04-22: minor edits to database.
